<resources>
    <string name="app_name">Android53_BTVN_Day9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_home">Home</string>
    <string name="menu_wishlist">WishList</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_account">Account</string>
    <string name="menu_cart">Cart</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
</resources>