<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/wishlistFragment"
        android:icon="@drawable/ic_wishlist"
        android:title="@string/menu_wishlist"
        app:showAsAction="always" />
    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/ic_categories"
        android:title="@string/menu_categories"
        app:showAsAction="always" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_account"
        android:title="@string/menu_account"
        app:showAsAction="always" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/menu_cart"
        app:showAsAction="ifRoom" />
</menu>
